# MyMathInterpreter

./: .gitignore  CMakeLists.txt  GlobalMacros.h  LICENSE.txt  Makefile  MyMathInterpreter.cpp  TestedProgram  main.cpp
Docs/: Syntax  simple_arithmetic_translator.xopp  todo
Parser/: ParserUnit.cpp  ParserUnit.h
include/: AST.h  ASTProducer.h  GarbageCollector.h  GlobalMacros.h  Interpreter.h  InterpretingUnit.h  LexerUnit.h  ParserUnit.h  StdBasedHashTable.h  StdBasedHashTable.hpp  Token.h  VariableHashTable.h  errors.h  garbageCollector.h  globalMacros.h  globalValues.h  lexerUnit.h  operatorsProc.h  parserUnit.h  token.h  tokenizer.h
src/: AST.cpp  ASTProducer.cpp  Interpreter.cpp  InterpretingUnit.cpp  LexerUnit.cpp  MyMathInterpreter.cpp  ParserUnit.cpp  lexerUnit.cpp  operatorsProc.cpp  parserUnit.cpp  token.cpp  tokenizer.cpp
